--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Sujan Chandra Mondol - Personal Page</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 100px;
+    }
+    h1 {
+      text-align: center;
+    }
+    img {
+      max-width: 200px;
+      border-radius: 50%;
+      margin-bottom: 20px;
+    }
+    .center {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 50%;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>Sujan Chandra Mondol - Personal Page</h1>
+
+  <img src="sjn_photo.png" alt="Photo of Sujan Chandra Mondol" class="center"> 
+
+  <p>
+    Hello! My name is Sujan Chandra Mondol and I am an international graduate student at Brigham Young University Department of Civil and Construction Engineering. Moreover, I am working under Professor Dr. Dan Ames in BYU Hydroinformatics Lab as a graduate research assistant. 
+  </p>
+  <p>
+This page is created as part of an assignment for the course CE 514: Geospatial Software Development in the semester Winter 2025.
+  </p>
+
+  <h2>My Links</h2>
+
+  <ul>
+    <li>Email: <a href="mailto:scm.mondol@gmail.com">scm.mondol@gmail.com</a></li>
+    <li>LinkedIn: <a href="https://linkedin.com/iamsujan">linkedin.com/iamsujan</a></li>
+    <li>GitHub: <a href="https://github.com.mondol-sc">github.com.mondol-sc</a></li>
+  </ul>
+
+</body>
+</html>
