Fourth commit to the index page

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
   <h1>Sujan Chandra Mondol - Personal Page</h1>
 
-  <p>
-This page is created as part of an assignment for the course CE 514 - Geospatial Software Development in the semester, Winter 2025.
+  <p> <center>
+This page is created as part of an assignment for the course CE 514 - Geospatial Software Development in the semester, Winter 2025. </center>
   </p>
 
   <img src="sjn_photo.png" alt="Photo of Sujan Chandra Mondol" class="center"> 
