Fifth commit to the index page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ This page is created as part of an assignment for the course CE 514 - Geospatial
     Hello! My name is Sujan Chandra Mondol and I am an international graduate student at Brigham Young University Department of Civil and Construction Engineering. Moreover, I am working under Professor Dr. Dan Ames in BYU Hydroinformatics Lab as a graduate research assistant. 
   </p>
 
-<div class="row">
+  <div class="row center">
 	<div class="column">
 		<img src="img_interest_1.jpeg" style="width:100%" class="center">
 	</div>
@@ -58,6 +58,7 @@ This page is created as part of an assignment for the course CE 514 - Geospatial
 		<img src="https://media.istockphoto.com/id/1646443939/photo/sunny-cricket-moments.jpg?s=1024x1024&w=is&k=20&c=NEk5TsN2oPb_ipVmIiyPIPtbAqXFcg0UyHmiEzw2Zz4=" style="width:100%" class="center">
 	</div>
 </div>
+
 
   <h2>My Links</h2>
 
