Seventh commit to the index page

--- a/index.html
+++ b/index.html
@@ -59,14 +59,15 @@ This page is created as part of an assignment for the course CE 514 - Geospatial
 	</div>
 </div>
 
+<center class="center">
+  <h3>My Links</h3>
 
-  <h2>My Links</h2>
+  
+    <p>LinkedIn: <a href="https://linkedin.com/in/iamsujan">linkedin.com/in/iamsujan</a></br>
+    GitHub: <a href="https://github.com/mondol-sc">github.com/mondol-sc</a></br>
+    BYU Hydroinformatics Lab: <a href="https://hydroinformatics.byu.edu/">hydroinformatics.byu.edu/</a></p>
 
-  <ul>
-    <li>LinkedIn: <a href="https://linkedin.com/in/iamsujan">linkedin.com/in/iamsujan</a></li>
-    <li>GitHub: <a href="https://github.com/mondol-sc">github.com/mondol-sc</a></li>
-    <li>BYU Hydroinformatics Lab: <a href="https://hydroinformatics.byu.edu/">hydroinformatics.byu.edu/</a></li>
-  </ul>
+  </center>
 
 </body>
 </html>
