Creating the CE514 Course Page and the Leaflet Map page with CSS and JS

--- a/index.html
+++ b/index.html
@@ -2,72 +2,42 @@
 <html>
 <head>
   <title>Sujan Chandra Mondol - Personal Page</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      margin: 100px;
-    }
-    h1 {
-      text-align: center;
-    }
-    img {
-      max-width: 200px;
-      border-radius: 50%;
-      margin-bottom: 20px;
-    }
-    .center {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      width: 50%;
-    }
-    .column {
-      float: left;
-      width: 30%;
-      padding: 5px;
-    }
-    .row::after {
-      content: "";
-      clear: both;
-      display: table
-}
-  </style>
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
+  <div class="header">
+    <h1>Sujan Chandra Mondol - Personal Page</h1>
+    <p class="center"> 
+      This page is created as part of an assignment for the course <a href="/ce514.html" target="_blank">CE 514 - Geospatial Software Development</a> in the semester, Winter 2025. </center>
+    </p>
+  </div>
+  
 
-  <h1>Sujan Chandra Mondol - Personal Page</h1>
-
-  <p> <center>
-This page is created as part of an assignment for the course CE 514 - Geospatial Software Development in the semester, Winter 2025. </center>
-  </p>
-
-  <img src="sjn_photo.png" alt="Photo of Sujan Chandra Mondol" class="center"> 
-
-  <p>
-    Hello! My name is Sujan Chandra Mondol and I am an international graduate student at Brigham Young University Department of Civil and Construction Engineering. Moreover, I am working under Professor Dr. Dan Ames in BYU Hydroinformatics Lab as a graduate research assistant. 
-  </p>
+  <div>
+    <img src="sjn_photo.png" alt="Photo of Sujan Chandra Mondol" class="center"> 
+    <p class="center">
+      Hello! My name is Sujan Chandra Mondol and I am an international graduate student at Brigham Young University Department of Civil and Construction Engineering. Moreover, I am working under Professor Dr. Dan Ames in BYU Hydroinformatics Lab as a graduate research assistant. 
+    </p>
+  </div>
+  
 
   <div class="row center">
-	<div class="column">
-		<img src="img_interest_1.jpeg" style="width:100%" class="center">
-	</div>
-	<div class="column">
-		<img src="https://www.shutterstock.com/shutterstock/photos/1833864460/display_1500/stock-photo-young-man-in-gray-warm-clothes-slowly-walking-through-alley-of-trees-in-yellow-autumn-day-at-park-1833864460.jpg" style="width:100%" class="center">
-	</div>
-	<div class="column">
-		<img src="https://media.istockphoto.com/id/1646443939/photo/sunny-cricket-moments.jpg?s=1024x1024&w=is&k=20&c=NEk5TsN2oPb_ipVmIiyPIPtbAqXFcg0UyHmiEzw2Zz4=" style="width:100%" class="center">
-	</div>
-</div>
+	  <div class="column">
+		  <img src="img_interest_1.jpeg" style="width:100%" class="center">
+	  </div>
+	  <div class="column">
+		  <img src="https://www.shutterstock.com/shutterstock/photos/1833864460/display_1500/stock-photo-young-man-in-gray-warm-clothes-slowly-walking-through-alley-of-trees-in-yellow-autumn-day-at-park-1833864460.jpg" style="width:100%" class="center">
+	  </div>
+	  <div class="column">
+		  <img src="https://media.istockphoto.com/id/1646443939/photo/sunny-cricket-moments.jpg?s=1024x1024&w=is&k=20&c=NEk5TsN2oPb_ipVmIiyPIPtbAqXFcg0UyHmiEzw2Zz4=" style="width:100%" class="center">
+	  </div>
+  </div>
 
-<center class="center">
-  <h3>My Links</h3>
-
-  
-    <p>LinkedIn: <a href="https://linkedin.com/in/iamsujan">linkedin.com/in/iamsujan</a></br>
-    GitHub: <a href="https://github.com/mondol-sc">github.com/mondol-sc</a></br>
-    BYU Hydroinformatics Lab: <a href="https://hydroinformatics.byu.edu/">hydroinformatics.byu.edu/</a></p>
-
-  </center>
-
+  <div class="footer">
+    <h3>My Links</h3>
+    <p>LinkedIn: <a href="https://linkedin.com/in/iamsujan" target="_blank">linkedin.com/in/iamsujan</a></br>
+    GitHub: <a href="https://github.com/mondol-sc" target="_blank">github.com/mondol-sc</a></br>
+    BYU Hydroinformatics Lab: <a href="https://hydroinformatics.byu.edu/" target="_blank">hydroinformatics.byu.edu/</a></p>
+  </div>
 </body>
 </html>
