--- a/ce514/classdemo.html
+++ b/ce514/classdemo.html
@@ -9,7 +9,7 @@
  
  <p>
    This is a webpage to talk about myself, Sujan Chandra Mondol, a bit. I am from the city of Dhaka in <a href="https://en.wikipedia.org/wiki/Bangladesh" target="_blank">Bangladesh</a>, a country from the South Asia. <br>
- <img src="https://en.wikipedia.org/wiki/Bangladesh#/media/File:Flag_of_Bangladesh.svg"> 
+ <img src="https://cdn.pixabay.com/photo/2013/07/13/14/14/bangladesh-162238_1280.png"> 
  </p>
  <hr>
  <p>
