Creating the Unit Conversion page with JavaScript  and adding it to the repo

--- a/ce514/index.html
+++ b/ce514/index.html
@@ -29,7 +29,7 @@
     		<p>Build custom web pages using HTML, JavaScript, and Cascading Style Sheets.</p>
     	</li>
     	<li style="--i: 3">
-    		<h3><a href="/ce514/unitconverter.html" target="_blank">A3 - Build a Unit Convertor Web Page with JavaScript</a></h3>
+    		<h3><a href="/unitconverter.html" target="_blank">A3 - Build a Unit Convertor Web Page with JavaScript</a></h3>
     		<p>Build custom web pages using HTML, JavaScript, and Cascading Style Sheets.</p>
     	</li>
     	<li style="--i: 4">
