--- a/ce514/unitconvertor.html
+++ b/ce514/unitconvertor.html
@@ -6,12 +6,14 @@
     </head>
 <body>
 <h1 class="header">
-Unit Converter for Length
+Unit Converter for Length 
+<br><br>
+<img src="https://thumbs.dreamstime.com/b/yellow-plastic-ruler-icon-flat-style-measuring-tool-vector-illustration-isolated-background-inches-centimeters-sign-340250613.jpg" width="320px" height="50px">
 </h1>
 <div class="center">
   <br>
     <label class="label" for="inputValue">Input Value: </label> <br>
-    <input id="inputValue" type="number" required>
+    <input id="inputValue" type="number" placeholder="Example: 514" required>
     <br>
     <label class="label" for="inputUnit">Input Unit: </label><br>
     <select id="inputUnit" name="inputUnit">
