CSS Improvement of all three pages created before

--- a/index.html
+++ b/index.html
@@ -5,39 +5,48 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <div class="header">
-    <h1>Sujan Chandra Mondol - Personal Page</h1>
-    <p class="center"> 
-      This page is created as part of an assignment for the course <a href="/ce514.html" target="_blank">CE 514 - Geospatial Software Development</a> in the semester, Winter 2025. </center>
-    </p>
-  </div>
-  
-
-  <div>
-    <img src="sjn_photo.png" alt="Photo of Sujan Chandra Mondol" class="center"> 
+  <div id="wrapper">
+    <div id="header">
+      <h1>Sujan Chandra Mondol - Personal Page</h1>
+      <p class="center"> 
+        This page is created as part of an assignment for the course <a href="/ce514.html" target="_blank">CE 514 - Geospatial Software Development</a> in the semester, Winter 2025. </center>
+      </p>
+    </div>
+    
+    <div id="nav-bar">
+      <ul > 
+        <li> <a href="/">Home</a> </li> 
+        <li> <a href="/ce514/">CE 514 Course Page</a></li>
+      </ul>
+    </div>
+    <img src="sjn_photo.png" alt="Photo of Sujan Chandra Mondol" /> 
     <p class="center">
       Hello! My name is Sujan Chandra Mondol and I am an international graduate student at Brigham Young University Department of Civil and Construction Engineering. Moreover, I am working under Professor Dr. Dan Ames in BYU Hydroinformatics Lab as a graduate research assistant. 
     </p>
-  </div>
-  
 
-  <div class="row center">
-	  <div class="column">
-		  <img src="img_interest_1.jpeg" style="width:100%" class="center">
-	  </div>
-	  <div class="column">
-		  <img src="https://www.shutterstock.com/shutterstock/photos/1833864460/display_1500/stock-photo-young-man-in-gray-warm-clothes-slowly-walking-through-alley-of-trees-in-yellow-autumn-day-at-park-1833864460.jpg" style="width:100%" class="center">
-	  </div>
-	  <div class="column">
-		  <img src="https://media.istockphoto.com/id/1646443939/photo/sunny-cricket-moments.jpg?s=1024x1024&w=is&k=20&c=NEk5TsN2oPb_ipVmIiyPIPtbAqXFcg0UyHmiEzw2Zz4=" style="width:100%" class="center">
-	  </div>
+    <div class="row center">
+      <div class="column">
+        <img src="img_interest_1.jpeg" style="width:100%" class="center">
+      </div>
+      <div class="column">
+        <img src="https://www.shutterstock.com/shutterstock/photos/1833864460/display_1500/stock-photo-young-man-in-gray-warm-clothes-slowly-walking-through-alley-of-trees-in-yellow-autumn-day-at-park-1833864460.jpg" style="width:100%" class="center">
+      </div>
+      <div class="column">
+        <img src="https://media.istockphoto.com/id/1646443939/photo/sunny-cricket-moments.jpg?s=1024x1024&w=is&k=20&c=NEk5TsN2oPb_ipVmIiyPIPtbAqXFcg0UyHmiEzw2Zz4=" style="width:100%" class="center">
+      </div>
+    </div>
+    <div id="footer">
+      <h3>My Links</h3>
+      <div id="v-nav-bar">
+        <ul>
+          <li>LinkedIn: <a href="https://linkedin.com/in/iamsujan" target="_blank">linkedin.com/in/iamsujan</a></li>
+          <li>GitHub: <a href="https://github.com/mondol-sc" target="_blank">github.com/mondol-sc</a></li>
+          <li>BYU Hydroinformatics Lab: <a href="https://hydroinformatics.byu.edu/" target="_blank">hydroinformatics.byu.edu/</a></li>
+        </ul>
+      </div>
+    </div>
   </div>
 
-  <div class="footer">
-    <h3>My Links</h3>
-    <p>LinkedIn: <a href="https://linkedin.com/in/iamsujan" target="_blank">linkedin.com/in/iamsujan</a></br>
-    GitHub: <a href="https://github.com/mondol-sc" target="_blank">github.com/mondol-sc</a></br>
-    BYU Hydroinformatics Lab: <a href="https://hydroinformatics.byu.edu/" target="_blank">hydroinformatics.byu.edu/</a></p>
-  </div>
+
 </body>
 </html>
