Update CE 514 Homepage with A5 Link

--- a/ce514/index.html
+++ b/ce514/index.html
@@ -33,11 +33,11 @@
     		<p>Build custom web pages using HTML, JavaScript, and Cascading Style Sheets.</p>
     	</li>
     	<li style="--i: 4">
-    		<h3>A4 - More JavaScript - Manning's Equation Calculator</h3>
-    		<p>Compute flow velocity from the channel width, depth, slope and Manning's n</p>
+    		<h3><a href="/index.css" target="_blank">A4 - Style Your Pages with External CSS</a></h3>
+    		<p>Add external CSS style sheets to 3 of the web pages you have created thus far. </p>
     	</li>
     	<li style="--i: 5">
-    		<h3>A5 - Build an Interactive Page with Leaflet Open Source Mapping API</h3>
+    		<h3><a href="/ce514/leaflet-interactive.html" target="_blank">A5 - Build an Interactive Page with Leaflet Open Source Mapping API</a></h3>
     		<p>Add an interactive Leaflet JavaScript map zoomed to the home town including point markers showing house, school, church, and one or two other points of interest.</p>
     	</li>
       <li style="--i: 6">
