--- a/ce514/ce514.html
+++ b/ce514/ce514.html
@@ -41,8 +41,8 @@
     		<p>Add an interactive Leaflet JavaScript map zoomed to the home town including point markers showing house, school, church, and one or two other points of interest.</p>
     	</li>
       <li style="--i: 6">
-    		<h3>A6 - Getting Started with HydroShare</h3>
-    		<p>Create a Hydroshare public resource that looks professional that shows shapefiles of points and polygons in a leaflet map</p>
+    		<h3><a href="/ce514/leaflet-kml.html" target="_blank">A6 - Use KML in Leaflet</a></h3>
+    		<p>Use the leaflet-kml plugin on top of leaflet library to use the KML vector files for the mapping purpose.</p>
     	</li>
       <li style="--i: 7">
         <h3>A7 - A web map for viewing HydroShare data</h3>
