Update Final Version of A6

--- a/ce514/leaflet-kml.html
+++ b/ce514/leaflet-kml.html
@@ -97,7 +97,7 @@ function kml_mapper(file, colorcode, infoBubble) {
             };
             const track = new L.KML(kml);
             track.setStyle({color:colorcode});
-            track.bindPopup(infoBubble);
+            track.bindPopup(infoBubble).openPopup();
             map.addLayer(track);
 
             // Adjust map to show the kml
