--- a/ce514.html
+++ b/ce514.html
@@ -45,8 +45,8 @@
     		<p>Use the leaflet-kml plugin on top of leaflet library to use the KML vector files for the mapping purpose.</p>
     	</li>
       <li style="--i: 7">
-        <h3>A7 - A web map for viewing HydroShare data</h3>
-        <p>Build a web map tool for viewing data from HydroShare</p>
+        <h3><a href="/ce514/leaflet-kml-enhanced.html" target="_blank">A7 - Enhance Leaflt-KML Page</a></h3>
+        <p>Added a dynamic wiki block and processed JSON and String in JS</p>
       </li>
       <li style="--i: 8">
     		<h3>A8 - A NWM Warning Application</h3>
