--- a/ce514/index.html
+++ b/ce514/index.html
@@ -41,12 +41,12 @@
     		<p>Add an interactive Leaflet JavaScript map zoomed to the home town including point markers showing house, school, church, and one or two other points of interest.</p>
     	</li>
       <li style="--i: 6">
-    		<h3>A6 - Getting Started with HydroShare</h3>
-    		<p>Create a Hydroshare public resource that looks professional that shows shapefiles of points and polygons in a leaflet map</p>
+    		<h3><a href="/ce514/leaflet-kml.html" target="_blank">A6 - Use KML in Leaflet</a></h3>
+    		<p>Use the leaflet-kml plugin on top of leaflet library to use the KML vector files for the mapping purpose.</p>
     	</li>
       <li style="--i: 7">
-        <h3>A7 - A web map for viewing HydroShare data</h3>
-        <p>Build a web map tool for viewing data from HydroShare</p>
+        <h3><a href="/ce514/leaflet-kml-enhanced.html" target="_blank">A7 - Enhance Leaflt-KML Page</a></h3>
+        <p>Added a dynamic wiki block and processed JSON and String in JS</p>
       </li>
       <li style="--i: 8">
     		<h3>A8 - A NWM Warning Application</h3>
