--- a/ce514/leaflet-kml.html
+++ b/ce514/leaflet-kml.html
@@ -21,7 +21,7 @@
       Date: 30 January, 2025 <br/>
     </p>
     <div class="container">
-      <table class="requirements">
+      <table class="tableframe">
         <tr>
           <th>What's Been Done</th>
         </tr>
