Upload the Hydroshare web mapping assignment

--- a/ce514.html
+++ b/ce514.html
@@ -41,12 +41,14 @@
     		<p>Add an interactive Leaflet JavaScript map zoomed to the home town including point markers showing house, school, church, and one or two other points of interest.</p>
     	</li>
       <li style="--i: 6">
-    		<h3><a href="/ce514/leaflet-kml.html" target="_blank">A6 - Use KML in Leaflet</a></h3>
+    		<h3><a href="/ce514/leaflet-kml.html" target="_blank">A6.1 - Use KML in Leaflet</a></h3>
     		<p>Use the leaflet-kml plugin on top of leaflet library to use the KML vector files for the mapping purpose.</p>
-    	</li>
-      <li style="--i: 7">
-        <h3><a href="/ce514/leaflet-kml-enhanced.html" target="_blank">A7 - Enhance Leaflt-KML Page</a></h3>
+			<h3><a href="/ce514/leaflet-kml-enhanced.html" target="_blank">A6.2 - Enhance Leaflt-KML Page</a></h3>
         <p>Added a dynamic wiki block and processed JSON and String in JS</p>
+		</li>
+      <li style="--i: 7">
+        <h3><a href="/ce514/hydroshare-leaflet-wms.html" target="_blank">A7 - A web map for viewing HydroShare data</a></h3>
+        <p>Shapefiles were uploaded in a HydroShare resource and they were used in Leaflet for web mapping</p>
       </li>
       <li style="--i: 8">
     		<h3>A8 - A NWM Warning Application</h3>
