--- a/ce514/index.html
+++ b/ce514/index.html
@@ -51,11 +51,11 @@
         <p>Shapefiles were uploaded in a HydroShare resource and they were used in Leaflet for web mapping</p>
       </li>
       <li style="--i: 8">
-    		<h3>A8 - A NWM Warning Application</h3>
-    		<p>Web app for NWM forecast warnings using the NOAA API and HydroShare GIS data</p>
+    		<h3><a href="/ce514/nwm-introduction.html" target="_blank"></a>A8 - Retrieve and plot data from the US National Water Model</h3>
+    		<p>Access NWM API and create table and charts from accessed data</p>
     	</li>
       <li style="--i: 9">
-    		<h3>A9 - NWM warning appilcation Part 2</h3>
+    		<h3>A9 - NWM warning appilcation</h3>
     		<p>Web app for NWM forecast warnings using the NOAA API and HydroShare GIS data part 2</p>
     	</li>
     </ol>
