--- a/ce514/nwm-introduction.html
+++ b/ce514/nwm-introduction.html
@@ -88,11 +88,11 @@
       </p>
       <p class="text-container">
         <label>General Information on the NWM:</label><br/>
-        <a href="https://water.noaa.gov/about/nwm" target="_blank"></a><button>Description about the NWM provided by NOAA</button>
+        <a href="https://water.noaa.gov/about/nwm" target="_blank"><button>Description about the NWM provided by NOAA</button></a>
       </p>
       <p class="text-container">
         <label>Technical Insights on the NWM:</label>
-        <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/1752-1688.13184" target="_blank"></a><button>Cosgrove, Brian, et al. "NOAA's National Water Model: Advancing operational hydrology through continental‐scale modeling." JAWRA Journal of the American Water Resources Association 60.2 (2024): 247-272.</button>
+        <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/1752-1688.13184" target="_blank"><button>Cosgrove, Brian, et al. "NOAA's National Water Model: Advancing operational hydrology through continental‐scale modeling." JAWRA Journal of the American Water Resources Association 60.2 (2024): 247-272.</button></a>
       </p>
       <p class="text-container">
         An <span class="highlighter">Application Programming Interface (API) </span></b> is a set of rules that enables applications to connect with each other for sharing data or features. Thus, it has become a useful conecpt in the context of water data accession and been implemented in several ways for the NWM also.
@@ -106,7 +106,7 @@
         Moreoever, the API parameters are specific to the particular endpoint and this provides minute control to the user over the range and type of data. The documentation page that comes with the API provides the user all necessary information to use the API without any difficulties.</p>
         <p class="text-container">
           <label>Technical Insights on CIROH NWM API:</label>
-          <a href="https://www.sciencedirect.com/science/article/pii/S1364815224001841" target="_blank"></a><button>Markert, Kel N., et al. "Design and Implementation of a Big Query Dataset and Application Programmer Interface (API) for the US National Water Model." Environmental Modelling & Software (2024): 106123.</button>
+          <a href="https://www.sciencedirect.com/science/article/pii/S1364815224001841" target="_blank"><button>Markert, Kel N., et al. "Design and Implementation of a Big Query Dataset and Application Programmer Interface (API) for the US National Water Model." Environmental Modelling & Software (2024): 106123.</button></a>
         </p>
       </div>
 
