--- a/ce514/ce514.html
+++ b/ce514/ce514.html
@@ -51,7 +51,7 @@
         <p>Shapefiles were uploaded in a HydroShare resource and they were used in Leaflet for web mapping</p>
       </li>
       <li style="--i: 8">
-    		<h3><a href="/ce514/nwm-introduction.html" target="_blank"></a>A8 - Retrieve and plot data from the US National Water Model</h3>
+    		<h3><a href="/ce514/nwm-introduction.html" target="_blank">A8 - Retrieve and plot data from the US National Water Model</a></h3>
     		<p>Access NWM API and create table and charts from accessed data</p>
     	</li>
       <li style="--i: 9">
