--- a/ce514.html
+++ b/ce514.html
@@ -55,8 +55,8 @@
     		<p>Access NWM API and create table and charts from accessed data</p>
     	</li>
       <li style="--i: 9">
-    		<h3>A9 - NWM warning appilcation</h3>
-    		<p>Web app for NWM forecast warnings using the NOAA API and HydroShare GIS data part 2</p>
+    		<h3><a href="/ce514/nwm-forecast-app.html" target="_blank">A9 - NWM Forecast Appilcation Project</a></h3>
+    		<p>Web app for NWM forecast warnings using the NOAA API and HydroShare GIS data</p>
     	</li>
     </ol>
   </div>
