Update some links

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
                             <p>
                             <span style="font-weight:370;">Research Projects: </span> 
                             <ul class="tag-list">
-                                <li><a href="#nwm-agentic-framework" target="_blank">LLM-based Agentic Framework for NWM</a></li>
-                                <li><a href="#nwm-evapotranspiration-ml" target="_blank">Improving NWM-ET through Observations and ML</a></li>
-                                <li><a href="#redesigned-nwm-api" target="_blank">Enhanced and Expanded API for National Water Model</a></li>
-                                <li><a href="#api-return-period-endpoint" target="_blank">Created Return-Period endpoint for CIROH API</a></li>
+                                <li><a href="projects#nwm-agentic-framework" target="_blank">LLM-based Agentic Framework for NWM</a></li>
+                                <li><a href="projects#nwm-evapotranspiration-ml" target="_blank">Improving NWM-ET through Observations and ML</a></li>
+                                <li><a href="projects#redesigned-nwm-api" target="_blank">Enhanced and Expanded API for National Water Model</a></li>
+                                <li><a href="projects#api-return-period-endpoint" target="_blank">Created Return-Period endpoint for CIROH API</a></li>
                             </ul>
                             </p>
                             <p>
