--- a/awards/index.html
+++ b/awards/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awards - Sujan Chandra Mondol</title>
+    <link rel="icon" type="image/x-icon" href="../assets/images/scm-favicon.ico">
     <meta property="og:locale" content="en-US">
     <meta property="og:site_name" content="Sujan Chandra Mondol">
     <meta property="og:title" content="Awards">
@@ -17,7 +18,7 @@
     <header>
         <div class="header-content">
             <h1>
-                <span>Sujan Chandra</span> <span class="app-name">Mondol</span>
+                <a href="https://mondol-sc.github.io" style="color:inherit; text-decoration: none;"><span>Sujan Chandra</span> <span class="app-name">Mondol</span></a>
             </h1>
             <nav>
                 <ul>
